...
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_network_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
...
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:gravity="center"
            android:text="@string/error_try_again" />

        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/button_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/errorText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/action_reload"
            app:typeface="roboto_condensed_regular" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textSize="16sp"
                app:typeface="roboto_condensed_regular" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/tvUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Large Text"
                android:textSize="14sp"
                app:typeface="roboto_condensed_regular" />
...
                    app:typeface="roboto_condensed_light"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

            <NumberPicker
                android:id="@+id/numberPickerC5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPickerC4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPickerC3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPickerC2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPickerC1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

        </LinearLayout>
...
                    app:typeface="roboto_condensed_light"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

            <NumberPicker
                android:id="@+id/numberPickerH5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPickerH4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPickerH3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPickerH2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPickerH1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/flash"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/flash_off" />

            <com.getbase.floatingactionbutton.AddFloatingActionButton
                android:id="@+id/action_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
...
